test/official_tests/for/fun_in_body.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
for (;;) fun foo() {}
